# pharos

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  install.ps1  install.sh  setup-env.ps1  setup-env.sh
backend/: README.md  pyproject.toml
backend/pharos/: __init__.py  cli.py  config.py
backend/pharos/api/: app.py  auth.py  deps.py
backend/pharos/api/routes/: admin.py  articles.py  auth.py  bookmarks.py  feeds.py  metrics.py  notifications.py  opml.py  report_schedules.py  reports.py  search.py  settings.py  stream.py  watches.py
backend/pharos/archiver/: __init__.py  job.py
backend/pharos/db/: __init__.py  connection.py  schema_cold.sql  schema_hot.sql
backend/pharos/db/migrations/: 0002_active_and_order.sql  0003_reports.sql  0004_email_notifications.sql  0005_report_schedules.sql
backend/pharos/feeds/: __init__.py  defaults.py
backend/pharos/ingestion/: __init__.py  dedup.py  extractor.py  fetcher.py  parser.py  scheduler.py
backend/pharos/lantern/: __init__.py  constellations.py  fingerprint.py  llm_client.py  malpedia.py  mitre.py  prompts.py  schema.py  worker.py
backend/pharos/notifier/: __init__.py  checker.py  email.py
backend/pharos/reports/: __init__.py  email_render.py  generator.py  prompts.py  scheduler.py
backend/tests/: conftest.py  test_db_init_and_archiver.py  test_dedup.py  test_default_feeds.py  test_fingerprint_and_clusters.py  test_mitre.py  test_parser.py
backend/tests/fixtures/: sample_feed.xml
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEFAULT_FEEDS.md  DEPLOYMENT.md  DEPLOY_DO.md  DEVELOPMENT.md  FAQ.md  INSTALL.md  LANTERN.md  MITRE.md  README.md  SCHEMA.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: .env.deploy.example  apply_feed_allowlist.py  bootstrap_admin.py  db_backup_local.py  db_pull_remote.py  deploy_do.py  fetch_malpedia.py  probe_openai.py  (+7 more)
(+45 files in other folders)
